k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garcar-prod
  labels:
    name: garcar-prod
    environment: production
